Fix some more deprecation warnings when building with Java 9. Use of Class.newInstance() in jdbc-pool
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1811205 13f79535-47bb-0310-9956-ffa450edef68